@startuml

title __SOFTWAREDESIGNPATTERNS's Class Diagram__\n

  namespace  {
    abstract class AccountDecorator {
    }
  }
  

  namespace  {
    abstract class BankAccount {
    }
  }
  

  namespace  {
    class BankApplication {
    }
  }
  

  namespace  {
    class CurrentAccount {
    }
  }
  

  namespace  {
    class GoldenYears {
    }
  }
  

  namespace  {
    class Graduate {
    }
  }
  

  namespace  {
    class Online {
    }
  }
  

  namespace  {
    class Person {
    }
  }
  

  namespace  {
    class Personal {
    }
  }
  

  namespace  {
    class SavingsAccount {
    }
  }
  

  namespace  {
    class Student {
    }
  }
  

  AccountDecorator -up-|> BankAccount
  AccountDecorator o-- BankAccount : account
  BankAccount o-- Person : accHolder
  CurrentAccount -up-|> BankAccount
  GoldenYears -up-|> AccountDecorator
  Graduate -up-|> AccountDecorator
  Online -up-|> AccountDecorator
  Personal -up-|> AccountDecorator
  SavingsAccount -up-|> BankAccount
  Student -up-|> AccountDecorator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
